# Projects

./: .gitignore  R projectsmedication_cart_kaizen.md  README.md  test.html
CXR_Classifier/: eda.ipynb  readme.md  requirements.txt  run.sh
CXR_Classifier/conf/: main.yaml
CXR_Classifier/evaluate/: predictions.json
CXR_Classifier/outputs/2025-07-03/23-24-43/.hydra/: hydra.yaml
CXR_Classifier/outputs/2025-07-03/23-31-28/.hydra/: hydra.yaml
CXR_Classifier/outputs/2025-07-03/23-35-46/.hydra/: config.yaml  hydra.yaml
CXR_Classifier/outputs/2025-07-03/23-51-06/.hydra/: config.yaml  hydra.yaml  overrides.yaml
CXR_Classifier/outputs/2025-07-03/23-52-21/.hydra/: config.yaml  hydra.yaml
CXR_Classifier/outputs/2025-07-04/09-35-22/.hydra/: config.yaml  hydra.yaml
CXR_Classifier/src/: data_loader.py  evaluate.py  general_utils.py  main.py  train_utils.py
Python projects/: CXR.md  CXR.py  Covid19 ICU Prediction.md  PBC Survival.ipynb  breast cancer prediction.md  breast_cancer_predict.py  covid19_ICU.py  mribrain.ipynb
QI projects/: medication_cart_kaizen.md  medication_cart_kaizen_final.R
Quarto Docs/: test.md
Quarto docs/: breast_cancer_knn.md  breast_cancer_knn.qmd
R projects/: COPD_walkingdist.R  Exercise tolerance in COPD patients.md  HF.R  Predictors of type 2 DM.md  Survival analysis of heart failure patients.md  breast cancer prediction.md  diabetes.R  medication_cart_QI.md  medication_cart_kaizen.md
RAG-MedGemma/: README.md  config.yaml  eval.ipynb  pyproject.toml  run.sh
RAG-MedGemma/src/: RAG.py  frontend.py  main.py
Zombie_epi/: Zombie.Rmd
lung_nodule_SVSS/: LICENSE.txt  README.md
lung_nodule_classification/: LICENSE.txt
lung_nodule_stack/: readme.md
(+47 files in other folders)
